kube/deployment.yml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: hview-deployment
  namespace: test
  labels:
    app: hview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hview
  template:
    metadata:
      labels:
        app: hview
    spec:
      containers:
      - name: hview
        image: registry.gross-bau.de/hview:latest
        ports:
        - containerPort: 8080
