kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: test
spec:
  rules:
  - host: hview.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hview-server
            port:
              number: 80
